--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-pandoc": "^0.2.2",
-    "gulp-watch": "^5.0.0"
+    "gulp-watch": "^5.0.0",
+    "mocha": "^5.1.0",
+    "node-fetch": "^2.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
